# claims-ai

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ActivityTimeline.jsx  KPICard.jsx  PetCard.jsx  SendClaimModal.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  SendClaim.jsx
src/claims_ai/: classifier.py  config.py  invoice_extractor.py  invoice_models.py  invoice_validator.py  main.py  models.py
tests/: test_classifier.py
